examples/test/testpolicy17602.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17602
  namespace: namespace45
spec:
  podSelector:
    matchLabels:
      key21: value17
      key37: value4
      key0: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value39
          key29: value26
          key2: value45
      podSelector:
        matchLabels:
          key28: value37
